tests/snapshots/miners/mine_one_block/bad_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - miners
    - mine-one-block
    - foo
    - "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value 'foo' for '<FROM_GROUP>': invalid digit found in string

For more information, try '--help'.
