tests/snapshots/miners/mine_one_block/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - miners
    - mine-one-block
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <FROM_GROUP>
  <TO_GROUP>

Usage: kermit miners mine-one-block <FROM_GROUP> <TO_GROUP>

For more information, try '--help'.
