tests/snapshots/miners/mine_one_block/one_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - miners
    - mine-one-block
    - "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <TO_GROUP>

Usage: kermit miners mine-one-block <FROM_GROUP> <TO_GROUP>

For more information, try '--help'.
