tests/snapshots/miners/mine_one_block/two_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - miners
    - mine-one-block
    - "1"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
true

----- stderr -----
